// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductsList Should render ProductsList component 1`] = `
<View
  style={
    Object {
      "borderRightColor": "#DADADA",
      "borderRightWidth": 1,
      "flexGrow": 1,
      "padding": 15,
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <View
        style={
          Object {
            "borderBottomColor": "#DADADA",
            "borderBottomWidth": 1,
            "paddingBottom": 10,
          }
        }
      >
        <withTheme(Searchbar)
          onChangeText={[Function]}
          placeholder="Search"
          value=""
        />
      </View>
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[MockFunction]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[MockFunction]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
      }
    }
    viewabilityConfigCallbackPairs={Array []}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomColor": "#DADADA",
              "borderBottomWidth": 1,
              "paddingBottom": 10,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "width": 176,
                },
                Array [
                  Object {
                    "width": "100%",
                  },
                  undefined,
                  undefined,
                ],
                Object {
                  "opacity": 1,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#D9D9D9",
                    "borderRadius": 4,
                    "borderWidth": 1,
                  },
                  Object {
                    "width": "100%",
                  },
                  Object {
                    "backgroundColor": "#F6F6F6",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 40,
                    "minHeight": 40,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={false}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "left": 10,
                      "opacity": 1,
                      "position": "absolute",
                      "right": "auto",
                      "top": "50%",
                      "transform": Array [
                        Object {
                          "translateY": -12.5,
                        },
                      ],
                      "zIndex": 5,
                    }
                  }
                >
                  <Text
                    accessibilityElementsHidden={true}
                    allowFontScaling={false}
                    importantForAccessibility="no-hide-descendants"
                    pointerEvents="none"
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontSize": 25,
                        },
                        Array [
                          Object {
                            "transform": Array [
                              Object {
                                "scaleX": 1,
                              },
                            ],
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                        ],
                        Object {
                          "fontFamily": "Material Design Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <TextInput
                  editable={true}
                  maxResizableWidth={750}
                  minHeight={60}
                  minWidth={0}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  paddingLeft={40}
                  paddingRight={8}
                  placeholder="Search"
                  placeholderTextColor="rgba(0, 0, 0, 0.54)"
                  selectionColor="#0768FD"
                  style={
                    Array [
                      Object {
                        "margin": 0,
                        "textAlign": "left",
                        "zIndex": 5,
                      },
                      undefined,
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": undefined,
                        "height": 40,
                        "minHeight": 0,
                        "paddingLeft": 40,
                        "paddingRight": 8,
                        "paddingVertical": 5,
                        "textAlignVertical": "center",
                        "width": "100%",
                      },
                    ]
                  }
                  value=""
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`ProductsList Should render empty ProductsList 1`] = `
<View
  style={
    Object {
      "borderRightColor": "#DADADA",
      "borderRightWidth": 1,
      "flexGrow": 1,
      "padding": 15,
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <View
        style={
          Object {
            "borderBottomColor": "#DADADA",
            "borderBottomWidth": 1,
            "paddingBottom": 10,
          }
        }
      >
        <withTheme(Searchbar)
          onChangeText={[Function]}
          placeholder="Search"
          value=""
        />
      </View>
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
      }
    }
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomColor": "#DADADA",
              "borderBottomWidth": 1,
              "paddingBottom": 10,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "width": 176,
                },
                Array [
                  Object {
                    "width": "100%",
                  },
                  undefined,
                  undefined,
                ],
                Object {
                  "opacity": 1,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#D9D9D9",
                    "borderRadius": 4,
                    "borderWidth": 1,
                  },
                  Object {
                    "width": "100%",
                  },
                  Object {
                    "backgroundColor": "#F6F6F6",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 40,
                    "minHeight": 40,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={false}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "left": 10,
                      "opacity": 1,
                      "position": "absolute",
                      "right": "auto",
                      "top": "50%",
                      "transform": Array [
                        Object {
                          "translateY": -12.5,
                        },
                      ],
                      "zIndex": 5,
                    }
                  }
                >
                  <Text
                    accessibilityElementsHidden={true}
                    allowFontScaling={false}
                    importantForAccessibility="no-hide-descendants"
                    pointerEvents="none"
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontSize": 25,
                        },
                        Array [
                          Object {
                            "transform": Array [
                              Object {
                                "scaleX": 1,
                              },
                            ],
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                        ],
                        Object {
                          "fontFamily": "Material Design Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <TextInput
                  editable={true}
                  maxResizableWidth={750}
                  minHeight={60}
                  minWidth={0}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  paddingLeft={40}
                  paddingRight={8}
                  placeholder="Search"
                  placeholderTextColor="rgba(0, 0, 0, 0.54)"
                  selectionColor="#0768FD"
                  style={
                    Array [
                      Object {
                        "margin": 0,
                        "textAlign": "left",
                        "zIndex": 5,
                      },
                      undefined,
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": undefined,
                        "height": 40,
                        "minHeight": 0,
                        "paddingLeft": 40,
                        "paddingRight": 8,
                        "paddingVertical": 5,
                        "textAlignVertical": "center",
                        "width": "100%",
                      },
                    ]
                  }
                  value=""
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
